Fix various icon alignment issues (#28775)

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1398,8 +1398,7 @@ body > [data-popper-placement] {
   .icon {
     width: 15px;
     height: 15px;
-    position: relative;
-    top: 0.145em;
+    vertical-align: middle;
   }
 }
 
@@ -5544,6 +5543,10 @@ a.status-card {
     padding-inline-end: 10px;
   }
 
+  .icon {
+    vertical-align: middle;
+  }
+
   .button {
     flex: 0 0 auto;
   }
@@ -6170,6 +6173,7 @@ a.status-card {
 
     .icon {
       color: $dark-text-color;
+      vertical-align: middle;
     }
   }
 }
